--- a/style/style.css
+++ b/style/style.css
@@ -620,11 +620,13 @@
 }
 .modal-content{
     position: relative;
-    background-color: var(--color-white);
     padding: 51px 0;
     border-radius: 30px;
     width: 1000px;
     height: 484px;
+}
+#account .modal-content{
+    background-color: var(--color-white);
 }
 .tour-guide .modal-content{
     width: 1240px;
@@ -633,19 +635,21 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    background: url(/images/pop-up-window/tour-guide.png) no-repeat center/ cover;
     position: relative;
 }
 .tour-guide .modal-content p{
     margin-bottom: 30px;
 }
-.tour-guide .modal-content img{
+.tour-guide .modal-content img:nth-last-child(2){
     width: 180px;
     z-index: 5;
     bottom: 50px;
     left: 50%;
     transform: translateX(-50%);
     position: absolute;
+}
+.tour-guide .modal-content img:last-child{
+    border-radius: 30px;
 }
 
 form{
@@ -725,14 +729,14 @@ input:focus{
     position: absolute;
     left: 0;
     top: 0;
-    border-radius: 20px 0 0 20px;
+    border-radius: 30px 0 0 30px;
     transition: .3s;
 }
 #signup-panel img{
     position: absolute;
     right: 0;
     top: 0;
-    border-radius: 0 20px 20px 0;
+    border-radius: 0 30px 30px 0;
     transition: .3s;
 }
 
