--- a/style/page/tour-guide-page.css
+++ b/style/page/tour-guide-page.css
@@ -59,7 +59,7 @@
     color: var(--color-secondary-pink-700);
 }
 .label-btn.pink.active span{
-    font-size: 65px;
+    font-size: 4rem;
     color: var(--color-secondary-pink-700);
 }
 .label-btn.active.pink{
@@ -86,7 +86,7 @@
     color: var(--color-secondary-orange-700);
 }
 .label-btn.orange.active span{
-    font-size: 65px;
+    font-size: 4rem;
     color: var(--color-secondary-orange-700);
 }
 .label-btn.active.orange{
@@ -113,7 +113,7 @@
     color: var(--color-secondary-purple-700);
 }
 .label-btn.purple.active span{
-    font-size: 65px;
+    font-size: 4rem;
     color: var(--color-secondary-purple-700);
 }
 .label-btn.active.purple{
@@ -180,6 +180,9 @@
     display: flex;
     margin-bottom: 50px;
 }
+.reading a{
+    text-decoration: none;
+}
 .reading .card{
     border: 1px solid var(--color-neutral-500);
     padding: 10px;
@@ -195,6 +198,12 @@
 .reading .card .title{
     text-align: center;
     margin: 12px 0;
+}
+.reading .card .title.pink:hover{
+    color: var(--color-secondary-pink-700);
+}
+.reading .card .title.purple:hover{
+    color: var(--color-secondary-purple-700);
 }
 
 /* mask */
@@ -223,7 +232,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    padding: 50px;
+    padding: 35px;
     z-index: 2;
     transition: opacity .7s ease;
     font-size: 0;
@@ -290,6 +299,9 @@
     border-radius: 12px;
     margin-right: 24px;;
 }
+.kid-learning a{
+    text-decoration: none;
+}
 .kid-learning .card h5{
     color: var(--color-secondary-pink-700);
 }
@@ -329,6 +341,7 @@
     background-color: var(--color-white);
     border-radius: 20px;
     padding: 36px;
+    cursor: pointer;
 }
 .paper .card:hover{
     border: 1px solid var(--color-secondary-orange-700);
@@ -409,6 +422,12 @@
     left:0;
     z-index: 1;
 }
+.financial h4 a{
+    text-decoration: none;
+}
+.financial h4 a:hover{
+    color: var(--color-secondary-orange-700);
+}
 .financial .card-mask h5, 
 .financial .card-mask p{
     color: var(--color-white);
@@ -430,21 +449,35 @@
 .financial li a{
     text-decoration: none;
 }
+.financial li:hover a{
+    color: var(--color-secondary-orange-700);
+}
+
 .recommend-list .title{
     margin:50px 0 20px 0;
 }
 .recommend-list ul{
     list-style: none;
 }
+
 .recommend-list li{
     border: 1px solid var(--color-neutral-500);
-    padding: 16px;
     text-align: center;
     border-radius: 20px;
+}
+.recommend-list li a{
+    display: block;
+    width: 100%;
+    padding: 16px;
 }
 .recommend-list li:hover{
     background-color: var(--color-secondary-orange-100);
     border: 1px solid var(--color-secondary-orange-700);
+    color: var(--color-secondary-orange-700);
+    text-decoration: none;
+}
+.recommend-list li:hover a{
+    text-decoration: none;
 }
 
 .medical .card{
