--- a/style/style.css
+++ b/style/style.css
@@ -15,6 +15,7 @@
 @import url("./component/button.css");
 @import url("./component/activity-cards.css");
 @import url("./component/footer.css");
+@import url("./component/book-list.css");
 
 *{
     padding: 0;
@@ -60,7 +61,7 @@
     border: 2px solid var(--color-accent-green-700);
 }
 .search-box{
-    height: 80px;
+    height: 60px;
     max-width: 910px;
     width: 100%;
     border-radius: 40px;
@@ -81,9 +82,9 @@
 }
 .tab-btn{
     display: inline-flex;
-    padding: 8px 40px;
+    padding: 4px 35px;
     background-color: var(--color-white);
-    border-radius: 20px;
+    border-radius: 30px;
     border: 1px solid var(--color-neutral-500);
     cursor: pointer;
 
@@ -214,13 +215,11 @@
     transform: translateY(-5px);
     opacity: 1;
 }
-.tour-guide .card .btn-sm-group{
-    transition: opacity .3s ease, visiblity 1s ease, height 1 ease;
-}
 .tour-guide .card:hover .btn-sm-group{
     opacity: 0;
     visibility: hidden;
     height: 0;
+    transition: height .3s ease, opacity .3s ease, visibility .3s ease;
     margin: 0;
 }
 .tour-guide .title{
@@ -286,8 +285,13 @@
 .news{
     position: relative;
 }
+.news .title{
+    display: flex;
+    flex-direction: column;
+}
 .news .title .h1-eg-medium{
     color: var(--color-accent-green-700);
+    margin-bottom: -20px;
 }
 .news img:nth-of-type(1){
     position: absolute;
@@ -340,6 +344,8 @@
     display: flex;
     align-items: center;
     max-width: 80%;
+    width: 100%;
+    justify-content: space-between;
 }
 .news-title p{
     margin: 0 36px;
@@ -347,6 +353,7 @@
 .news-title:hover span{
     transform: translateX(10px);
     transition: .3s ease-out;
+    color: var(--color-accent-green-700);
 }
 .news-title:hover p{
     color: var(--color-accent-green-700);
@@ -388,38 +395,12 @@
     margin-top: 60px;
 }
 
-/* 書籍共用設定 */
-.books-list .tag{
-    color: var(--color-accent-green-700);
-}
-.books-list .bookname{
-    margin-bottom: 10px;
-}
-.books-list{
-    text-align: center;
-}
-.books-list .detail{
-    max-width: 80%;
-    text-align: left;
-    margin: auto;
-}
-
 /* ==== hot-activity ==== */
 .hot-activity{
     position: relative;
     padding: 85px 0 0 0;
     overflow: hidden;
 }
-/* .hot-activity .row{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-} */
-/* 
-.hot-activity .row .col-11{
-    width: 65vw;
-    flex-shrink: 0;
-} */
 .hot-activity img.bg{
     position: absolute;
     width: 100%;
@@ -427,7 +408,6 @@
     left: 0;
     z-index:-1;
 }
-
 .hot-activity .container .title{
     margin-bottom: 80px;
 }
@@ -543,6 +523,11 @@
     border: 1px solid var(--color-accent-green-700);
     color: var(--color-accent-green-700);
     opacity: 1;
+}
+.hot-activity-swiper .swiper-pagination-bullet:hover{
+    background-color: var(--color-accent-green-200);
+    color: var(--color-accent-green-700);
+    transition: .3s;
 }
 .hot-activity-swiper .swiper-pagination-bullet-active{
     background-color: var(--color-accent-green-700);
@@ -744,14 +729,15 @@ input:focus{
 .close-btn{
     width:40px;
     height: 40px;
-    border: 1px solid var(--color-white);
+    border: 1px solid var(--color-accent-green-700);
+    background-color: var(--color-white);
     border-radius: 50%;
     position: absolute;
-    top: -60px;
-    left: 50%;
-    transform: translateX(-50%);
+    top: 15px;
+    right: 15px;
     cursor: pointer;
     transition: .3s;
+    z-index: 1;
 }
 .close-btn:hover{
     background-color: var(--color-accent-green-200);
@@ -764,9 +750,9 @@ input:focus{
     display: block;
     height: 2px;
     width: 24px;
-    background-color: var(--color-white);
-    top: 18px;
-    left:6px;
+    background-color: var(--color-accent-green-700);
+    top: 19px;
+    left:7px;
 }
 .close-btn span:first-child{
     transform: rotate(45deg);
